Add landing page

--- a/includes/nav.html
+++ b/includes/nav.html
@@ -21,25 +21,23 @@
     <div class="collapse navbar-collapse" id="navContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">
-            <i class="fa-solid fa-gauge" style="color: #ffffff;"></i>
+          <a class="nav-link text-white" href="/dashboard/index.html">
+            <i
+              class="fa-solid fa-gauge"
+              aria-hidden="true"
+              style="color: #ffffff;"></i>
             Dashboard</a>
         </li>
         <li class="nav-item">
           <a
             class="nav-link text-white"
-            href=" aria-hidden="
-            true"">
-            <i class="fa-solid fa-heart" style="color: #ffffff;"></i>
+            href="https://help.proudcity.com/"
+            target="_blank">
+            <i
+              class="fa-solid fa-heart"
+              aria-hidden="true"
+              style="color: #ffffff;"></i>
             Help</a>
-        </li>
-        <li class="nav-item">
-          <a
-            class="nav-link text-white"
-            href=" aria-hidden="
-            true"">
-            <i class="fa-solid fa-square-plus" style="color: #ffffff;"></i>
-            New</a>
         </li>
       </ul>
     </div>
