--- a/includes/nav.html
+++ b/includes/nav.html
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse" id="navContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link text-white" href="/dashboard/index.html">
+          <a class="nav-link text-white" href="/dashboard">
             <i
               class="fa-solid fa-gauge"
               aria-hidden="true"
