--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
       <img
-        src="/assets/img/proudcity-icon-white.png"
+        src="{{ site.baseurl }}/assets/img/proudcity-icon-white.png"
         width="30"
         height="30"
         class="d-inline-block align-top"
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse" id="navContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link text-white" href="/dashboard">
+          <a class="nav-link text-white" href="{{ site.baseurl }}/dashboard">
             <i
               class="fa-solid fa-gauge"
               aria-hidden="true"
