--- a/_includes/style.html
+++ b/_includes/style.html
@@ -3,16 +3,14 @@
 <!-- Syntax highlighting
 <link rel="stylesheet" href="{{site.baseurl}}/css/base16.dark.css"> -->
 <!-- Font Awesome
-<linkrel="stylesheet"href="{{site.baseurl}}/assets/font-awesome/css/all.min.css"
-crossorigin="anonymous">
-<script src="{{site.baseurl}}/assets/font-awesome/js/all.min.js" crossorigin="anonymous"></script>
+<linkrel="stylesheet"href="{{site.baseurl}}/assets/font-awesome/css/all.min.css"crossorigin="anonymous"><script src="{{site.baseurl}}/assets/font-awesome/js/all.min.js" crossorigin="anonymous"></script>
 -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script
   src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
   crossorigin="anonymous"></script>
-<script src="/assets/font-awesome/js/all.min.js" crossorigin="anonymous"></script>
+<script src="{{site.baseurl}}/assets/font-awesome/js/all.min.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap">
   <!-- Custom CSS -->
 <link href="{{site.baseurl}}/css/style.css" rel="stylesheet">
