--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-primary text-white border-bottom">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand" href="{{site.baseurl}}">
       <img
         src="{{ site.baseurl }}/assets/img/proudcity-icon-white.png"
         width="30"
