Update dashboard comp

--- a/_layouts/dashboard.html
+++ b/_layouts/dashboard.html
@@ -11,14 +11,25 @@ layout: dashboard
           <div class="container mt-4 py-1">
             <div class="row">
               <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                <h1 class="fw-bold h2">Dashboard</h1>
+                <h1 class="fw-bold h2 mb-4">Dashboard</h1>
               </div>
             </div>
             <div class="row">
               <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                <div class="alert alert-primary mt-3" role="alert">
+                <div class="alert alert-warning" role="alert">
                   <h2 class="h3 fw-bold">Say hello to your new dashboard! 👋</h2>
                   <p>We're just getting started, so expect more updates.</p>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <div class="alert alert-primary" role="alert">
+                  <h2 class="h4 fw-bold">FYI from ProudCity ⭐</h2>
+                  <ul>
+                    <li><a href="https://proudcity.com/proudcity-named-to-2024-govtech-100-list/">ProudCity named to 2024 GovTech 100 list</a></li>
+                    <li><a href="https://help.proudcity.com/iframes-embedded-content/">Embedded content</a></li>
+                    </ul>
                 </div>
               </div>
             </div>
