--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -38,12 +38,12 @@
             Help</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="/share">
+          <a class="nav-link text-white" href="{{site.baseurl}}/share">
             <i class="fa-solid fa-share-nodes"></i>
             Share</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="/share">
+          <a class="nav-link text-white" href="#">
             <i class="fa-solid fa-user"></i>
             Account</a>
         </li>
