--- a/_includes/nav-dashboard.html
+++ b/_includes/nav-dashboard.html
@@ -8,4 +8,7 @@
   <li class="nav-item">
     <a class="nav-link" href="/dashboard">Dashboard</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/development">Development</a>
+  </li>
 </ul>
