--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <div class="container-fluid pt-4 mt-3 border-top">
+  <div class="container-fluid pt-4 border-top">
     <div class="row">
       <div class="col-12 text-center">
         <p class="small">
