--- a/_includes/nav-dashboard.html
+++ b/_includes/nav-dashboard.html
@@ -1,14 +1,12 @@
 <ul class="nav flex-column">
   <li class="nav-item">
-    <a
-      class="nav-link"
-      aria-current="page"
-      href="#">Visit site</a>
+    <a class="nav-link text-dark" href="#">
+      <i class="fa-solid fa-house"></i>
+      Visit site</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/dashboard">Dashboard</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="/development">Development</a>
+    <a class="nav-link text-dark" href="{{site.baseurl}}/dashboard">
+      <i class="fa-solid fa-gauge"></i>
+      Dashboard</a>
   </li>
 </ul>
