--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -29,6 +29,17 @@
         <li class="nav-item">
           <a
             class="nav-link text-white"
+            href="{{ site.baseurl }}/development"
+            target="_blank">
+            <i
+              class="fa-solid fa-code"
+              aria-hidden="true"
+              style="color: #ffffff;"></i>
+            Dev</a>
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link text-white"
             href="https://help.proudcity.com/"
             target="_blank">
             <i
