--- a/_layouts/dashboard.html
+++ b/_layouts/dashboard.html
@@ -6,7 +6,7 @@ layout: dashboard
 <main id="home">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-12 col-sm-12 col-md-2 col-lg-2 col-xl-2">
+      <div class="col-12 col-sm-12 col-md-2 col-lg-2 col-xl-2 bg-light">
         {% include nav-dashboard.html %}
       </div>
       <div class="col-12 col-sm-12 col-md-10 col-lg-10 col-xl-10">
