--- a/_layouts/sites.html
+++ b/_layouts/sites.html
@@ -9,21 +9,37 @@ layout: sites
       <main id="home">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
               <h1 class="fw-bold h2 mb-4">{{ page.title }}</h1>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+              <form class="float-end">
+                <div class="mb-3">
+                  <label for="" class="form-label visually-hidden">Search</label>
+                  <input
+                    type=""
+                    class="form-control"
+                    id=""
+                    aria-describedby=""
+                    placeholder="search">
+                  <div id="" class="form-text"></div>
+                </div>
+              </form>
             </div>
             <div class="row">
               <div class="card-group">
                 <div class="card mb-3">
                   <div class="card-body">
                     <span class="badge mb-3 text-bg-success">LIVE</span>
-                    <h2 class="card-title h4 fw-bold">Site name</h2>
+                    <h2 class="card-title h4 fw-bold">
+                      <a href="#">Site name</a>
+                    </h2>
                     <p class="card-text">
                       <small class="">
                         <a
                           href="https://proudcity.com"
                           target="_blank"
-                          class="link-secondary link-underline link-underline-opacity-0">proudcity.com
+                          class="link-secondary link-underline link-underline-opacity-0 overflow-hidden">proudcity.com
                           <i class="fa-solid fa-up-right-from-square" aria-label="External Link"></i>
                         </a>
                       </small>
@@ -70,7 +86,9 @@ layout: sites
                 <div class="card mb-3">
                   <div class="card-body">
                     <span class="badge mb-3 text-bg-warning">TEST</span>
-                    <h2 class="card-title h4 fw-bold">Site name</h2>
+                    <h2 class="card-title h4 fw-bold">
+                      <a href="#">Site name</a>
+                    </h2>
                     <p class="card-text">
                       <small class="">
                         <a
@@ -123,7 +141,9 @@ layout: sites
                 <div class="card mb-3">
                   <div class="card-body">
                     <span class="badge mb-3 text-bg-success">LIVE</span>
-                    <h2 class="card-title h4 fw-bold">Site name</h2>
+                    <h2 class="card-title h4 fw-bold">
+                      <a href="#">Site name</a>
+                    </h2>
                     <p class="card-text">
                       <small class="">
                         <a
