--- a/_layouts/sites.html
+++ b/_layouts/sites.html
@@ -4,10 +4,8 @@ layout: sites
 {% include header.html %}
 {% include nav.html %}
 <main>
-  <div class="container mt-4">
-    <div class="row">
       <main id="home">
-        <div class="container-fluid">
+        <div class="container mt-4">
           <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
               <h1 class="fw-bold h2 mb-4">{{ page.title }}</h1>
@@ -25,6 +23,17 @@ layout: sites
                   <div id="" class="form-text"></div>
                 </div>
               </form>
+            </div>
+          </div>
+            <div class="row">
+              <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <div class="alert alert-danger" role="alert">
+                  <h2 class="card-title h4 fw-bold mb-3 mt-2">Alert heading</h2>
+                  <p>Alert text. Alert text. Alert text. Alert text. Alert text.</p>
+                  <p>Alert text. Alert text. Alert text. Alert text. Alert text.</p>
+                  <p>Alert text. Alert text. Alert text. Alert text. Alert text.</p>
+                </div>
+              </div>
             </div>
             <div class="row">
               <div class="card-group">
@@ -201,10 +210,8 @@ layout: sites
                 </div>
               </div>
             </div>
-          </div>
         </div>
       </main>
     </div>
-  </div>
 </main>
 {% include footer.html %}
